--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
