--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_DOMAIN=http://localhost:8080
+REACT_APP_SERVER_DOMAIN=https://food-delivery-backend-lx4b.onrender.com
+REACT_APP_SERVER_DOMAIN_DEV=http://localhost:8080
